# kltools

./: README.md
harnas-monitor/: .gitignore  AGENTS.md  Cargo.toml  README.md  TASKS.test.toml
harnas-monitor/src/: main.rs  tasks.rs  ui.rs
models-dev/: .gitignore  AGENTS.md  README.md  config.toml  package-lock.json  package.json
models-dev/scripts/: install-ubuntu.sh
models-dev/src/: base-command.js
models-dev/src/commands/models/: add.js  list.js  show.js
models-dev/src/commands/providers/: list.js  show.js
models-dev/src/lib/: api.js  data.js  format.js
models-dev/test/: commands-args.test.js
models-dev/test/fixtures/: api.json
reqman/: .gitignore  AGENTS.md  README.md  package-lock.json  package.json  tsconfig.json
reqman/examples/: data.toml  schema.json
reqman/src/: index.ts
weather-mcp/: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
weather-mcp/src/weather_mcp/: __init__.py  mcp_server.py  open_meteo.py  sampling.py  weather_codes.py
weather-mcp/tests/: test_mcp_server.py  test_sampling.py  test_weather_codes.py
