[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "weather-mcp"
version = "0.1.0"
description = "Stateless headless weather MCP server using Open-Meteo"
requires-python = ">=3.13"
dependencies = [
    "httpx>=0.27.0",
    "fastmcp>=3.1.1",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.8.0",
    "mypy>=1.13.0",
    "pytest>=8.0.0",
    "types-python-dateutil",
]

[project.scripts]
weather-mcp = "weather_mcp.mcp_server:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
target-version = "py313"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.13"
strict = true
warn_unused_configs = true
packages = ["weather_mcp"]

[tool.pytest.ini_options]
testpaths = ["tests"]
